--- a/schedulesvc-idl/pom.xml
+++ b/schedulesvc-idl/pom.xml
@@ -18,9 +18,9 @@
     <inceptionYear>2012</inceptionYear>
 
     <scm>
-        <connection>scm:git:git://dev.30and30.com/30and30/repos/techresidents/services/schedulesvc.git</connection>
-        <developerConnection>scm:git:git://dev.30and30.com/30and30/repos/techresidents/services/schedulesvc.git</developerConnection>
-        <url>scm:git:git://dev.30and30.com/30and30/repos/techresidents/services/schedulesvc.git</url>
+        <connection>scm:git:git://dev.techresidents.com/tr/repos/techresidents/services/schedulesvc.git</connection>
+        <developerConnection>scm:git:git://dev.techresidents.com/tr/repos/techresidents/services/schedulesvc.git</developerConnection>
+        <url>scm:git:git://dev.techresidents.com/tr/repos/techresidents/services/schedulesvc.git</url>
     </scm>
 
     <profiles>
