--- a/schedulesvc-idl/idl/pom.xml
+++ b/schedulesvc-idl/idl/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.techresidents.services.schedulesvc</groupId>
         <artifactId>schedulesvc-idl</artifactId>
-        <version>0.7.0</version>
+        <version>0.8-SNAPSHOT</version>
     </parent>
 
     <artifactId>schedulesvc-idl-idl</artifactId>
