--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -6,8 +6,8 @@ pyzmq==2.1.11
 greenlet==0.3.4
 gevent==0.13.6
 gevent-zeromq==0.2.2
+opentok-python-sdk == 0.91.1
 git+https://github.com/basho/riak-python-client.git@1.4.0#egg=riak
-git+git://github.com/opentok/Opentok-Python-SDK.git
 
 git+ssh://dev.techresidents.com/tr/repos/techresidents/lib/python/zookeeper.git@3.3.5#egg=zookeeper
 git+ssh://dev.techresidents.com/tr/repos/techresidents/lib/python/trpycore.git@0.5.0#egg=trpycore
