--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -2,16 +2,12 @@ pytz
 psycopg2==2.4.5
 SQLAlchemy==0.7.6
 thrift==0.8.0
-pyzmq==2.1.11
-greenlet==0.3.4
-gevent==0.13.6
-gevent-zeromq==0.2.2
 opentok-python-sdk == 0.91.1
 git+https://github.com/basho/riak-python-client.git@1.4.0#egg=riak
 
 git+ssh://dev.techresidents.com/tr/repos/techresidents/lib/python/zookeeper.git@3.3.5#egg=zookeeper
 git+ssh://dev.techresidents.com/tr/repos/techresidents/lib/python/trpycore.git@0.5.0#egg=trpycore
-git+ssh://dev.techresidents.com/tr/repos/techresidents/services/core/python/trsvcscore.git@0.7.0#egg=trsvcscore
+git+ssh://dev.techresidents.com/tr/repos/techresidents/services/core/python/trsvcscore.git@integration#egg=trsvcscore
 
 http://nexus.dev.techresidents.com/content/groups/public/com/techresidents/services/core/idl/idl-core-python/0.7.0/idl-core-python-0.7.0-bin.tar.gz#egg=tridlcore
 http://nexus.dev.techresidents.com/content/groups/public/com/techresidents/services/schedulesvc/schedulesvc-idl-python/0.10-SNAPSHOT/schedulesvc-idl-python-0.10-SNAPSHOT-bin.tar.gz#egg=schedulesvc
