--- a/schedulesvc-idl/idl-java/pom.xml
+++ b/schedulesvc-idl/idl-java/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.techresidents.services.schedulesvc</groupId>
         <artifactId>schedulesvc-idl</artifactId>
-        <version>0.10-SNAPSHOT</version>
+        <version>0.10.0</version>
     </parent>
 
     <artifactId>schedulesvc-idl-java</artifactId>
