--- a/schedulesvc-idl/idl-python/pom.xml
+++ b/schedulesvc-idl/idl-python/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.techresidents.services.schedulesvc</groupId>
         <artifactId>schedulesvc-idl</artifactId>
-        <version>0.11-SNAPSHOT</version>
+        <version>0.11.0</version>
     </parent>
 
     <artifactId>schedulesvc-idl-python</artifactId>
