--- a/schedulesvc-idl/pom.xml
+++ b/schedulesvc-idl/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>com.techresidents.services.schedulesvc</groupId>
     <artifactId>schedulesvc-idl</artifactId>
-    <version>0.11-SNAPSHOT</version>
+    <version>0.11.0</version>
     <packaging>pom</packaging>
 
     <name>schedulesvc idl</name>
